--- a/frontend2_klubranch.html
+++ b/frontend2_klubranch.html
@@ -5,8 +5,12 @@
     </title>
     <body>
         <p>
-            India 
+            
         </p>
+        <Routes>
+    <Route path='/page1' element={<Page1/></Route>
+  </Routes>
+</BrowserRouter>
     </body>
 </head>
 </html>
